@@ -2,8 +2,8 @@
 import './sql';
 
 const nodeinfo = angular.module('nodeinfo', ['sql'])
-  .factory('NodeHealth', function() {
-    var state = function(val){
+  .factory('NodeHealth', function () {
+    var state = function (val) {
       if (val > 98) {
         return 2;
       } else if (val > 90) {
@@ -11,12 +11,18 @@ const nodeinfo = angular.module('nodeinfo', ['sql'])
       }
       return 0;
     };
-    return function(node) {
-      this.value = state(Math.max(node.fs.used_percent, node.heap.used_percent));
-      this.status = ['good','warning','critical'][this.value];
+    return function (node) {
+      const fs_used_percent = node.fs ? node.fs.used_percent : 0;
+      const heap_used_percent = node.heap ? node.heap.used_percent : 0;
+      if (fs_used_percent === 0 && heap_used_percent === 0) {
+        this.status = 'default';
+      } else {
+        this.value = state(Math.max(fs_used_percent, heap_used_percent));
+        this.status = ['good', 'warning', 'critical'][this.value];
+      }
     };
   })
-  .factory('NodeInfo', function(SQLQuery, queryResultToObjects, $q) {
+  .factory('NodeInfo', function (SQLQuery, queryResultToObjects, $q) {
     var nodeInfo = {
       deferred: $q.defer()
     };
@@ -26,12 +32,12 @@ const nodeinfo = angular.module('nodeinfo', ['sql'])
       'os_info[\'available_processors\'] FROM sys.nodes ORDER BY id';
     var nodeCols = ['id', 'name', 'hostname', 'rest_url', 'port', 'heap', 'fs',
       'cpu', 'load', 'version', 'timestamp', 'proc_cpu', 'num_cores'];
-    nodeInfo.executeNodeQuery = function() {
+    nodeInfo.executeNodeQuery = function () {
       var d = $q.defer();
-      SQLQuery.execute(nodeQuery, {}, false, false, false, false).success(function(sqlQuery){
+      SQLQuery.execute(nodeQuery, {}, false, false, false, false).success(function (sqlQuery) {
         var response = queryResultToObjects(sqlQuery, nodeCols);
         d.resolve(response);
-      }).error(function(){
+      }).error(function () {
         d.reject();
       });
       return d.promise;
@@ -39,11 +45,11 @@ const nodeinfo = angular.module('nodeinfo', ['sql'])
 
     var clusterQuery = 'select name, master_node from sys.cluster';
     var clusterCols = ['name', 'master_node'];
-    nodeInfo.executeClusterQuery = function(){
+    nodeInfo.executeClusterQuery = function () {
       var d = $q.defer();
-      SQLQuery.execute(clusterQuery, {}, false, false, false, false).success(function(sqlQuery){
+      SQLQuery.execute(clusterQuery, {}, false, false, false, false).success(function (sqlQuery) {
         d.resolve(queryResultToObjects(sqlQuery, clusterCols));
-      }).error(function(){
+      }).error(function () {
         d.reject();
       });
       return d.promise;
@@ -51,13 +57,13 @@ const nodeinfo = angular.module('nodeinfo', ['sql'])
 
     return nodeInfo;
   })
-  .provider('NodeListInfo', function() {
+  .provider('NodeListInfo', function () {
     var sortInfo = {
       sort: {
         'col': ['health_value', 'name'],
         'desc': false
       },
-      sortBy: function(col) {
+      sortBy: function (col) {
         if (this.sort.col.indexOf(col) === 0) {
           this.sort.desc = !this.sort.desc;
         } else {
@@ -65,7 +71,7 @@ const nodeinfo = angular.module('nodeinfo', ['sql'])
           this.sort.desc = false;
         }
       },
-      sortClass: function(col) {
+      sortClass: function (col) {
         if (this.sort.col.indexOf(col) === 0) {
           return this.sort.desc ? 'fa fa-caret-down' : 'fa fa-caret-up';
         } else {
@@ -73,35 +79,46 @@ const nodeinfo = angular.module('nodeinfo', ['sql'])
         }
       }
     };
-    this.$get = function() {
+    this.$get = function () {
       return sortInfo;
     };
   })
-  .factory('prepareNodeList', function(NodeHealth){
+  .factory('prepareNodeList', function (NodeHealth) {
     var LABEL_COLOR_MAP = {
       good: 'label-success',
       warning: 'label-warning',
       critical: 'label-danger',
+      unreacheable: 'label-default',
       '--': ''
     };
-    return function(cluster, master_node) {
+    return function (cluster, master_node) {
       var nodeList = [];
       for (var i = 0; i < cluster.length; i++) {
         var node = angular.copy(cluster[i]);
+
         node.health = new NodeHealth(node);
         node.health_value = node.health.value;
-        node.health_label_class = LABEL_COLOR_MAP[node.health.status];
-        node.health_panel_class = LABEL_COLOR_MAP[node.health.status];
-        node.heap.used_percent = node.heap.used * 100 / node.heap.max;
-        node.heap.free_percent = 100.0 - node.heap.used_percent;
+
+        node.health_label_class = node.health ? LABEL_COLOR_MAP[node.health.status] : LABEL_COLOR_MAP.unreacheable;
+        node.health_panel_class = node.health ? LABEL_COLOR_MAP[node.health.status] : LABEL_COLOR_MAP.unreacheable;
+
+        if (node.heap) {
+          node.heap.used_percent = node.heap.used * 100 / node.heap.max;
+          node.heap.free_percent = 100.0 - node.heap.used_percent;
+        } else {
+          node.heap = {};
+          node.heap.used_percent = 0;
+          node.heap.free_percent = 100.0;
+        }
+
         node.master_node = node.id === master_node;
         nodeList.push(node);
       }
       return nodeList;
     };
   })
-  .factory('compareByHealth', function() {
-    return function(a, b) {
+  .factory('compareByHealth', function () {
+    return function (a, b) {
       if (a.health.value < b.health.value) {
         return -1;
       } else if (a.health.value > b.health.value) {
