@@ -54,6 +54,9 @@ $red--faded:        rgba(236, 87, 78, 0.3);
 $lightred:          rgb(249, 242, 244);
 $darkred:           rgb(199, 37, 78);
 
+$grey :    #717171;
+$grey--faded: #525151;
+
 $numeric-result-blue: #181bd0;
 $text-result-green: #0e7735;
 $boolean-result-red: #d01515;
@@ -178,6 +181,9 @@ $bubble-warning-background:     $orange--faded;
 $bubble-danger-border:          2px solid  $red;
 $bubble-danger-background:      $red--faded;
 
+$bubble-default-border:          2px solid  $grey;
+$bubble-default-background:      $grey--faded;
+
 
 $bubble-master-border:          2px solid $blue;
 $bubble-master-background:      $blue--faded;
@@ -234,8 +240,8 @@ $cr-panel-warning-background:       $orange--faded;
 $cr-panel-danger-border:            2px solid $red;
 $cr-panel-danger-background:        $red--faded;
 
-$cr-panel-default-border:           1px solid #ccc;
-$cr-panel-default-background:       #fff;
+$cr-panel-default-border:           1px solid #grey;
+$cr-panel-default-background:       #faded-grey;
 
 $cr-panel-block__item__header__icon--checks--color: #000;
 
