@@ -15,7 +15,6 @@
 
 .node-list__header{
 	padding: 10px;
-	border-bottom: 1px solid #ececec;
 }
 .node-list__header__title {
 	flex: 1 0 auto;
